@@ -1,0 +1,35 @@
+# Copyright 2017 gRPC authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# frozen_string_literal: true
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# source: helloworld.proto
+
+if !defined?(JRUBY_VERSION) && RUBY_VERSION < '2.7'
+  require 'google/protobuf'
+
+  Google::Protobuf::DescriptorPool.generated_pool.build do
+    add_message "helloworld.HelloRequest" do
+      optional :name, :string, 1
+    end
+    add_message "helloworld.HelloReply" do
+      optional :message, :string, 1
+    end
+  end
+
+  module Helloworld
+    HelloRequest = Google::Protobuf::DescriptorPool.generated_pool.lookup("helloworld.HelloRequest").msgclass
+    HelloReply = Google::Protobuf::DescriptorPool.generated_pool.lookup("helloworld.HelloReply").msgclass
+  end
+end
