@@ -35,6 +35,15 @@ endif::[]
 [[release-notes-3.x]]
 === Ruby Agent version 3.x
 
+[float]
+[[unreleased]]
+==== Unreleased
+
+[float]
+===== Added
+
+- Support for gRPC using the `grpc` gem (Experimental) {pull}669[#669]
+
 [[release-notes-3.5.0]]
 ==== 3.5.0 (2020-02-12)
 
